<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".list.ListActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voici_la_liste_de_vos_courses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerview"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/purple_500"/>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/produit"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/txt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/prix_unitaire"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/txt3"
        app:layout_constraintStart_toEndOf="@id/txt1"
        app:layout_constraintTop_toBottomOf="@id/txt"/>

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/quantit"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/txt4"
        app:layout_constraintStart_toEndOf="@id/txt2"
        app:layout_constraintTop_toBottomOf="@id/txt" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/prix_total"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/txt5"
        app:layout_constraintStart_toEndOf="@id/txt3"
        app:layout_constraintTop_toBottomOf="@id/txt" />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/supprimer"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt4"
        app:layout_constraintTop_toBottomOf="@id/txt" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/txt1"
        app:layout_constraintBottom_toTopOf="@id/returnbutton"
        android:layout_width="match_parent"
        android:layout_height="400dp"/>

    <Button
        android:id="@+id/returnbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="continuer les achats"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"/>

    <TextView
        android:id="@+id/panier"
        android:text="@string/le_montant_de_votre_panier_est_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/returnbutton"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/montant"
        android:inputType="number"
        android:hint="montant"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/returnbutton"
        android:layout_marginTop="25dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/panier"
        app:layout_constraintStart_toEndOf="@id/panier"
        android:textColor="@color/design_default_color_error"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>